###### PROJECT NAME AND VERSION ######
project(template)
cmake_minimum_required(VERSION 3.10)



####### ENABLE TESTING ######
include(CTest)
enable_testing()



###### COMPILER AND LANGUAGE OPTIONS ######
#CPP STANDARD OPTIONS
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
# EXPORT COMPILE COMMANDS
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)



###### CPACK PACKAGING SYSTEM ######
set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
include(CPack)



###### STRUCTURE SETUP ######
#BIN and LIB DUMP FOLDERS
set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
#SUBDIRECTORIES (they must have their own CMakeLists.txt)
add_subdirectory(${PROJECT_SOURCE_DIR}/src)
add_subdirectory(${PROJECT_SOURCE_DIR}/test)
